fix(style.css): Remove unnecessary nav {text-align: left;}

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,6 @@ body {
   }
 }
 nav {
-  text-align: left;
 }
 nav ul {
   list-style-type: none;
